--- a/html/index.html
+++ b/html/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>starbucks clone</title>
     <link rel="stylesheet" href="../css/style.css">
-    <script defer src="../js/script.js"></script>
+    <!-- <script defer src="../js/script.js"></script>// -->
+    <script defer src="js/script.js"></script>
 </head>
 
 <body>
@@ -24,7 +25,7 @@
                             <li><a href="#">My Starbucks</a></li>
                             <li><a href="#">Customer Service & Ideas</a></li>
                             <li><a href="#">Find a Store</a></li>
-                            <li><a href="#">ico</a></li>
+                            <li><a href="#"><img src="../imgs/icon_magnifier_black.png" alt=""></a></li>
                         </ul>
                     </nav>
                     <nav class="bot">
@@ -298,11 +299,41 @@
                             <div class="img-wrapper">
                                 <div class="img"><img src="../imgs/2025_autumn_top_drink01_250916.png" alt=""></div>
                                 <div class="img"><img src="../imgs/2025_autumn_top_drink04_250916.png" alt=""></div>
+                                <div class="img"><img src="../imgs/2025_autumn_top_drink02_251024.png" alt=""></div>
+                                <div class="img"><img src="../imgs/2025_autumn_top_drink05_251024.png" alt=""></div>
+                                <div class="img"><img src="../imgs/2025_autumn_top_drink03_250916.png" alt=""></div>
+                                <div class="img"><img src="../imgs/2025_autumn_top_drink06_251024.png" alt=""></div>
                             </div>
                         </div>
                     </div>
                 </div>
             </section>
+
+
+            <script>
+                document.addEventListener("DOMContentLoaded", () => {
+                    const imgWrapper = document.querySelector(".hero-inner .r .r-inner .img-wrapper");
+
+                    const observer = new IntersectionObserver(
+                        (entries) => {
+                            entries.forEach(entry => {
+                                if (entry.isIntersecting) {
+                                    imgWrapper.classList.add("active");
+                                } else {
+                                    imgWrapper.classList.remove("active");
+                                }
+                            });
+                        },
+                        {
+                            threshold: 0.3,
+                        }
+                    );
+
+                    observer.observe(imgWrapper);
+                });
+            </script>
+
+
             <section id="notice">
                 <div class="notice-inner">
                     <div class="l">
@@ -313,13 +344,13 @@
                                 <!-- 여러 내용이 나오는 애니메이션 -->
                                 <p class="notice"></p>
                             </div>
-                            <div class="plus-icon"></div>
+                            <div class="plus-icon"><img src="../imgs/btn_notice_plus.png" alt=""></div>
                         </div>
                     </div>
                     <div class="r">
                         <div class="inner">
                             <h4>스타벅스 프로모션</h4>
-                            <div class="arrow-bot-icon"></div>
+                            <div class="arrow-bot-icon"><img src="../imgs/btn_prom_down.png" alt=""></div>
                         </div>
                     </div>
                 </div>
@@ -356,7 +387,7 @@
                                     후, <br class="mob-br"> 첫 구매를 하시면 무료 음료쿠폰을 드립니다!</p>
                             </div>
                             <div class="btn-area">
-                                <button id="btn-002">스타벅스 모바일 카드 선물하기</button>
+                                <button id="btn-002" class="btn-002-01">스타벅스 모바일 카드 선물하기</button>
                             </div>
                         </div>
                     </div>
@@ -369,10 +400,32 @@
                     </div>
                     <div class="r">
                         <div class="img"><img src="../imgs/2025_autumn_promotion_txt_250916.png" alt="txt-img"></div>
+                        <div class="img-mob"><img src="../imgs/2025_autumn_promotion_txt_mo_250916.png" alt=""></div>
                         <button id="btn-002">자세히 보기</button>
                     </div>
                 </div>
             </section>
+            <script>
+                document.addEventListener("DOMContentLoaded", () => {
+                    const promoSection = document.querySelector("#promo .promo-inner");
+
+                    const observer = new IntersectionObserver(
+                        (entries) => {
+                            entries.forEach(entry => {
+                                if (entry.isIntersecting) {
+                                    promoSection.classList.add("active");
+                                } else {
+                                    promoSection.classList.remove("active");
+                                }
+                            });
+                        },
+                        { threshold: 0.3 }
+                    );
+
+                    observer.observe(promoSection);
+                });
+            </script>
+
             <section id="reserve">
                 <div class="reserve-inner">
                     <div class="l"><img src="../imgs/251021_pc_reserve_title.png" alt=""></div>
@@ -394,6 +447,26 @@
                     </div>
                 </div>
             </section>
+
+            <script>
+                document.addEventListener("DOMContentLoaded", () => {
+                    // fav
+
+                    const favInner = document.querySelector(".fav-inner");
+
+                    const observer = new IntersectionObserver((entries) => {
+                        entries.forEach((entry) => {
+                            if (entry.isIntersecting) {
+                                favInner.classList.add("active");
+                            }
+                        });
+                    });
+
+                    observer.observe(favInner);
+
+                });
+            </script>
+
             <section id="reserve-magazine">
                 <div class="reserve-magazine-inner">
                     <div class="l"><img src="../imgs/reserve_text_pc.png" alt=""></div>
@@ -407,13 +480,16 @@
                     <div class="l">
                         <img src="../imgs/221212_main_story_1.png" alt="">
                         <img src="../imgs/221212_main_story_2.png" alt="">
-                        <img src="../imgs/store_exp_img03.png" alt="">
+                        <!-- <img src="../imgs/store_exp_img03.png" alt=""> -->
                     </div>
                     <div class="r">
                         <img src="../imgs/221212_pc_main_story_txt_1.png" alt="">
                         <img src="../imgs/221212_pc_main_story_txt_2.png" alt="">
-                        <button id="btn-003">매장 찾기</button>
-                        <img src="../imgs/store_exp_img04.png" alt="">
+                        <img class="store-img-m" src="../imgs/221212_m_main_story_txt_2.png" alt="">
+                        <div class="btn-area">
+                            <button id="btn-003">매장 찾기</button>
+                        </div>
+                        <img class="store-img" src="../imgs/store_exp_img04.png" alt="">
                     </div>
                 </div>
             </section>
@@ -542,3 +618,30 @@
 
 
 </html>
+
+<script>
+    const notices = [
+        "시스템 개선 및 서비스 점검 안내",
+        "개인정보처리방침 개정 안내",
+        "홈페이지 이용약관 및 스타벅스 카드 이용약관 개정 안내",
+    ];
+
+    const noticeEl = document.querySelector(".notice");
+    let index = 0;
+
+    function changeNotice() {
+        noticeEl.classList.remove("show");
+
+        setTimeout(() => {
+            noticeEl.textContent = notices[index];
+            noticeEl.classList.add("show");
+            index = (index + 1) % notices.length;
+        }, 500);
+    }
+
+    noticeEl.textContent = notices[index];
+    noticeEl.classList.add("show");
+    index++;
+
+    setInterval(changeNotice, 5000);
+</script>
